--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,19 +7,39 @@
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Itim&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Shreyansh Mahato - Full Stack Developer Portfolio showcasing projects and skills in web development, algorithms, and machine learning." />
+    <meta name="keywords" content="Shreyansh Mahato, Full Stack Developer, Web Development, React, JavaScript, Portfolio" />
+    <meta name="author" content="Shreyansh Mahato" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Gravitas+One&family=Itim&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Roboto+Mono:ital@0;1&display=swap');
-      </style>
-    <title>Vite + React</title>
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Itim&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+    </style>
+    <title>Shreyansh Mahato | Full Stack Developer</title>
   </head>
   <body>
-    <div id="root">
-      
+    <div id="loading-overlay" style="
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background-color: hsl(var(--background-darkest)); /* Or a specific dark color from your palette */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      opacity: 1;
+      transition: opacity 1s ease-out;
+    ">
+      <div style="
+        width: 60px;
+        height: 60px;
+        border: 6px solid hsl(var(--accent), 0.3);
+        border-top-color: hsl(var(--accent));
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      "></div>
     </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
   </body>
 </html>
